# semverx

./: .gitattributes  Cargo.toml  MSYS_RUST_SETUP.md  README.md  setup.sh
docs/: RUST Semantic Versioning X GUIDELINE USAGE .md  Sementic Versioning Xtended for Hybrid Directed Instructed Systen.md
docs/Documentation/: documentation.html  index.html
docs/MVP-SemverX/: CMakeLists.txt  COMPLETE_README.md  DEPLOYMENT.md  SAMPLE_PROJECT.md  package.json  pysemverx_registry.py  registry_client.ts  registry_schema.md  registry_server.rs
docs/MVP-SemverX/aghe-dozie/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.old  build.sh  faukt_tolerance_integration.c  gatogi_algorithm.c  odts_integration.h  pattern_gating_odts.c
docs/MVP-SemverX/aghe-dozie/cmake/: FindODTS.cmake  agha_dozieConfig.cmake.in
docs/MVP-SemverX/aghe-dozie/examples/: CMakeLists.txt  gatogi_mulit_polygon.c
docs/MVP-SemverX/aghe-dozie/tests/: CMakeLists.txt
docs/MVP-Semvex-w-Gating-AntiHallucution-V2/: GATING_METHODOLOGY_CORRECTION.md  QUICK_START_GATING_CORRECTION.md  gating_algorithm.c  gating_multi_pattern.c  migrate_gatogi_to_gating.sh  odts_integration.h
docs/MVP-Semvex-w-Gating-AntiHallucution-V2/backup_20251030_013232/: GATING_METHODOLOGY_CORRECTION.md  QUICK_START_GATING_CORRECTION.md  odts_integration.h
scripts/adhoc/: fix_compilation_errors.sh  implement_missing.sh  reform.sh
src/: ffi.rs.bak  lib.rs
src/ffi/: mod.rs
src/resolver/: graph.rs  mod.rs
tests/integration/: test_full_flow.rs
tests/security/: test_zero_trust.rs
tests/unit/: test_version_parsing.rs
